<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/Piel">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@color/black">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:src="@drawable/baseline_format_list_bulleted_24"
            android:layout_marginLeft="10dp" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/img" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="16dp"
        android:text="@string/actividades_l_dicas"
        android:textColor="#000000"
        android:textSize="24sp"
        android:layout_marginTop="30dp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/Piel"
            android:padding="16dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="355dp"
                android:background="@color/white"
                android:elevation="4dp"
                android:orientation="vertical"
                android:padding="16dp">

                <EditText
                    android:id="@+id/etUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:autofillHints="username"
                    android:hint="@string/usuario"
                    android:inputType="textPersonName"
                    android:minHeight="48dp" />

                <EditText
                    android:id="@+id/etNombreActividad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:autofillHints="name"
                    android:hint="@string/nombre_de_la_actividad"
                    android:inputType="textCapWords"
                    android:minHeight="48dp" />

                <EditText
                    android:id="@+id/etFecha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:autofillHints="date"
                    android:hint="@string/fecha_de_la_actividad"
                    android:inputType="date"
                    android:minHeight="48dp" />

                <EditText
                    android:id="@+id/etDescripcion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/descripcion_de_la_actividad"
                    android:inputType="textMultiLine"
                    android:minHeight="48dp"
                    android:minLines="3" />

            </LinearLayout>


            <Button
                android:id="@+id/btnSubirImagen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:minHeight="48dp"
                android:backgroundTint="@color/Verde"
                android:text="@string/subir_imagen" />

            <Button
                android:id="@+id/btnSubirVideo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:backgroundTint="@color/Verde"
                android:minHeight="48dp"
                android:text="@string/subir_video" />

            <Button
                android:id="@+id/btnEnviarEvidencia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:backgroundTint="@color/Verde"
                android:minHeight="48dp"
                android:text="@string/enviar_evidencia" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
