<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Piel">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/topBar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="#000000"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingHorizontal="12dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/baseline_format_list_bulleted_24"
                android:contentDescription="@string/icono_izquierda" />

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/img"
                android:contentDescription="@string/icono_derecha" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_margin="16dp"
            android:background="#FFFFFF"
            android:elevation="4dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/asesoramiento"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="12dp"
                android:background="@android:color/white"
                android:layout_marginBottom="16dp"
                android:elevation="4dp"
                android:gravity="center_vertical">

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="Buscar ..."
                    android:padding="8dp"
                    android:background="@android:color/transparent"
                    android:textColor="#000000"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@android:drawable/ic_menu_search"
                    android:tint="#888888" />
            </LinearLayout>



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/informaci_n"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginBottom="8dp" />

            <LinearLayout
                android:id="@+id/item1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="#DDDDDD"
                android:padding="8dp"
                android:layout_marginBottom="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="30dp"
                    android:gravity="|center_vertical">

                    <TextView
                        android:id="@+id/title1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/opcion_1"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/toggle1"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@android:drawable/arrow_down_float" />
                </LinearLayout>

                <TextView
                    android:id="@+id/content1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contenido_de_la_opcion_1"
                    android:visibility="gone"
                    android:paddingTop="8dp" />


                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="12dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/documentos"
                        android:textStyle="bold"
                        android:textSize="14sp" />



                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:paddingTop="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/agregar_nuevo_enlace"
                            android:textSize="14sp"
                            android:layout_marginEnd="8dp"/>

                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/item2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:background="#DDDDDD"
                android:padding="8dp"
                android:layout_marginBottom="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="30dp"
                    android:gravity="|center_vertical">

                    <TextView
                        android:id="@+id/title2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/opcion_2"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/toggle2"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@android:drawable/arrow_down_float" />
                </LinearLayout>

                <TextView
                    android:id="@+id/content2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contenido_de_la_opcion_2"
                    android:visibility="gone"
                    android:paddingTop="8dp" />

                <!-- Documentos y Enlaces -->
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="12dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Documentos"
                        android:textStyle="bold"
                        android:textSize="14sp" />



                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:paddingTop="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/agregar_nuevo_enlace1"
                            android:textSize="14sp"
                            android:layout_marginEnd="8dp"/>

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:id="@+id/item3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:background="#DDDDDD"
                android:padding="8dp"
                android:layout_marginBottom="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="|center_vertical">

                    <TextView
                        android:id="@+id/title3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/opci_n_3"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/toggle3"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@android:drawable/arrow_down_float" />
                </LinearLayout>

                <TextView
                    android:id="@+id/content3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contenido_de_la_opcion_3"
                    android:visibility="gone"
                    android:paddingTop="8dp" />


                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="12dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/documentos1"
                        android:textStyle="bold"
                        android:textSize="14sp" />


                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:paddingTop="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/agregar_nuevo_enlace2"
                            android:textSize="14sp"
                            android:layout_marginEnd="8dp"/>

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</ScrollView>

